[package]
name = "cosmwasm_liquid_staking"
version = "0.1.0"
edition = "2021"
description = "CosmWasm smart contract for liquid staking dApp with rewards"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-repo-url"

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.15.0
"""

[dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std = { version = "1.5.0", features = ["stargate"] }
cw-storage-plus = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
schemars = { version = "0.8", features = ["derive"] }
thiserror = "1.0"
prost = "0.12"
prost-types = "0.12"

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cw-multi-test = { version = "1.0.0", default-features = false }
cosmwasm-std = { version = "1.0.0", features = ["staking"] }
insta = "1.16"

[profile.release]
lto = true

[lib]
name = "cosmwasm_liquid_staking"
path = "src/lib.rs"

